@@ -394,7 +394,7 @@ random
 this flag is only active with \fIiflag=\fR and when given replaces
 \fIif=IFILE\fR. If both are given an error is generated. The input will
 be a stream of pseudo random bytes. The Linux getrandom(2) system call is
-used to create a seed and thereadter mrand48(3) is used to generate a
+used to create a seed and there after mrand48(3) is used to generate a
 pseudo random sequence, 4 bytes at a time. The quality of the randomness
 can be viewed with the ent(1) utility. This is not a high quality random
 number generator, it is built for speed, not quality. One application is
