@@ -84,7 +84,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Sun Sep 12 2021 - dgilbert at interlog dot com
+* Sat Sep 25 2021 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.47
 
