@@ -2,7 +2,7 @@ sg3-utils (1.47-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 12 Sep 2021 14:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 25 Sep 2021 00:01:00 -0400
 
 sg3-utils (1.46-0.1) unstable; urgency=low
 
